actualizacion de proyecto

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <li>Leonela</li>
         <li>Fatima</li>
         <li>Niño rata jefer </li>
-
+<h2>lista de materia</h2>
+<li>matematica</li>
+<li>programacion</li>
+<li>relaciones humanas</li>
 </body>
 </html>
